--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -2,3 +2,5 @@
 @import "../libs/bootstrap/scss/bootstrap-grid.scss"
 @import "../libs/bootstrap/scss/utilities/_sizing.scss"
 @import url("../libs/fontawesome/font-awesome.css")
+@import url("../libs/slick-carousel/slick/slick.css")
+@import url("../libs/slick-carousel/slick/slick-theme.css")
