--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -53,11 +53,18 @@ a
 	outline: none
 	text-decoration: none
 
-/*---------HEADER----------*/
+section 
+	margin-top: em(135px)
 
+/*---------HEADER----------*/
 header
 	width: 100%
-	height: 700px
+	height: 100vh
+	position: relative
+	.link
+		display: none
+	.adaptive-menu
+		display: none
 	.nav-section
 		position: absolute
 		top: 0
@@ -200,6 +207,229 @@ header
 .next
 	right: 0
 
+/*------------S-MAIN SECTION-----------*/
+ 
+.s-main 
+	&-title
+		margin-bottom: em(15px)
+		p 
+			font-family: "MontserattLight", sans-serif
+			text-transform: uppercase
+			color: #46485c
+			font-size: em(30px)
+			letter-spacing: 2px
+	&-p 
+		margin-bottom: em(95px)
+		p 
+			font-size: em(13px)
+			font-family: $description-font
+			color: $section-text-color
+	.head 
+		margin-bottom: em(10px)
+		.head-title
+			font-family: "MontserattBold", sans-serif
+			color: $accent-2
+			font-size: em(19px)
+			text-transform: uppercase
+	.description
+		margin-bottom: em(90px)
+		p 
+			font-size: em(13px)
+			font-family: $description-font
+			color: $section-text-color
+	&-image 
+		position: relative
+		&:before 
+			content: ''
+			position: absolute
+			width: 70%
+			right: 0
+			bottom: 0
+			height: 80%
+			background-color: #ebebe9
+			z-index: -1
 
+/*-----------S-CATALOG SECTION-----------*/
+.s-catalog 
+	&-title, &-shot_description 
+		width: 100%
+		display: flex
+		justify-content: center
+		align-items: center
+	&-title
+		@extend %catalog-title
+	&-shot_description 
+		@extend %catalog-shot-description
+	.position
+		display: flex
+		flex-direction: column
+		cursor: pointer
+		margin-bottom: em(45px)
+		border: 1px solid #ebebe9
+		transition: 0.5s
+		&:hover
+			background-color: #ebebe9
+			.flowers
+				background-color: #f5e4ce;
+				.flowers-passive
+					display: none
+					transition: 0.5s
+				.flowers-active
+					display: block
+					transition: 0.5s
+		.flowers
+			@extend %flex-position
+			background-color: #ebebe9
+			padding: em(20px)
+		.rating
+			@extend %flex-position
+			padding: em(20px) 0 em(10px) 0
+			.fa 
+				color: $accent-2
+				margin-left: em(5px)
+				&:last-child
+					color: #b6c6c9
+		.flowers-title
+			@extend %flex-position
+			.h2
+				text-transform: uppercase
+				font-family: "MontserattBold", sans-serif
+				color: $header-postext
+		.price
+			@extend %flex-position
+			margin-bottom: em(10px)
+			p 
+				font-family: $description-font
+				text-transform: uppercase
+				color: $accent
+		.flowers-btn
+			@extend %flex-position
+			margin-bottom: em(10px)
+			&-order
+				border: 1px solid $accent
+				border-radius: 15px
+				text-transform: uppercase
+				font-family: $header-font
+				color: $header-postext
+				padding: em(5px) em(80px)
+				background-color: $white
+				font-size: em(13px)
+				cursor: pointer
+.fta 
+	position: relative
+	padding-top: em(45px)
+	&:before
+		position: absolute
+		content: ''
+		width: 30%
+		background-color: $accent
+		height: 2px
+		top: 30%
+.flowers-active
+	display: none
+
+/*-----------S_GOODS----------*/
+
+.section-image	
+	.items-image
+		width: 300px
+		height: 300px
+		background-position: center
+		background-repeat: no-repeat
+		background-size: cover
+		margin: em(20px)
+		position: relative
+	.btn-arrow.btn-prev
+		position: absolute
+		top: 50%
+		left: 0
+		z-index: 100
+		cursor: pointer
+		padding: em(10px) em(20px)
+		background-color: $accent-2
+		color: $white
+		.fa  
+			font-weight: 300
+			font-size: 16px
+	.btn-arrow.btn-next
+		position: absolute
+		top: 50%
+		right: 0
+		z-index: 100
+		cursor: pointer
+		padding: em(10px) em(20px)
+		background-color: $accent-2
+		color: $white
+		.fa  
+			font-weight: 300
+
+/*----------S-TULIPS SECTION----------*/
+.s-tulips
+	&-image
+		img 
+			width: 100%
+	&-discount
+		width: 100%
+		display: flex
+		justify-content: center
+		align-items: center
+		flex-direction: column
+		&-title 
+			font-family: $section-font
+			font-size: em(70px)
+			color: #212331
+			text-transform: uppercase
+		&-sale 
+			font-family: $section-font
+			font-size: em(50px)
+			color: #212331
+			text-transform: uppercase
+		&-p 
+			font-family: $description-font
+			color: $section-text-color
+			width: 50%
+			margin-bottom: em(40px)
+		&-button 
+			button
+				font-size: em(18px)
+				text-transform: uppercase
+				color: $white
+				padding: em(8px) em(45px)
+				background-color: $accent
+				border: none
+				cursor: pointer
+				transition: 0.5s
+				&:hover
+					background-color: lighten($accent, 6)
+
+/*-----------S-SALES SECTION---------*/
+.s-sales 
+	&-background 
+		width: 100%
+		height: em(500px)
+		background-size: cover
+		background-position: center 
+		background-repeat: no-repeat
+		position: relative
+		@extend %flex-position
+		&:before 
+			content: ''
+			position: absolute
+			top: 0
+			bottom: 0
+			right: 0
+			left: 0
+			background-color: rgba($overlay-color, .6)
+		&-description
+			z-index: 10
+			p 
+				font-family: $banner-font
+				font-size: em(160px)
+				text-transform: uppercase
+				text-align: center
+				color: $white
+				span 
+					color: $accent-2
+					margin-bottom: em(-50px)
 
 @import "media" // Always at the end
