--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,6 +1,7 @@
 @import "../libs/bootstrap/scss/bootstrap-reboot.scss"
 @import "../libs/bootstrap/scss/bootstrap-grid.scss"
 @import "../libs/bootstrap/scss/utilities/_sizing.scss"
+@import "../libs/slick-carousel/slick/slick.scss"
+@import "../libs/slick-carousel/slick/slick-theme.scss"
+@import "../libs/magnific-popup/src/css/main.scss"
 @import url("../libs/fontawesome/font-awesome.css")
-@import url("../libs/slick-carousel/slick/slick.css")
-@import url("../libs/slick-carousel/slick/slick-theme.css")
