--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -14,6 +14,7 @@ $black: #000000
 $header-postext: #5f727f
 $section-title-text: #2c2e3d
 $section-description-text: #99a9b5
+$footer-color: #3e3e3e
 
 %catalog-title
 	font-family: $section-font
