--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -56,6 +56,155 @@ a
 section 
 	margin-top: em(135px)
 
+/*----------MODAL-CALL----------*/
+.overlay_modal
+	position: fixed
+	left: 0
+	top: 0
+	width: 100%
+	height: 100%
+	background-color: rgba(0,0,0,.8)
+	display: none
+	z-index: 200
+	transition: all 0.5s ease
+.window_modal
+	position: fixed
+	width: em(390px)
+	height: em(476px)
+	left: 50%
+	top: 50%
+	transform: translate(-50%, 200%)
+	padding: 0
+	background-color: #fcfcfc
+	z-index: 210
+	display: grid 
+	grid-template-rows: 200px 276px
+	overflow: hidden
+	border-radius: 10px
+	transition: all 0.5s ease
+	.modal_img
+		height: 200px
+		background-size: cover
+		background-position: center center
+		overflow: hidden
+		position: relative
+		&::after
+			content: ''
+			position: absolute
+			width: 110%
+			bottom: -35px
+			right: 0
+			border: 40px solid #fcfcfc
+			transform: rotate(10deg)
+	.el
+		display: flex 
+		flex-direction: column
+		justify-content: space-around
+		align-items: center
+		width: 100%
+		padding: 20px
+		.p_modal
+			font-family: $header-font
+			font-size: em(16px)
+			color: $black
+		form 
+			display: flex
+			flex-direction: column
+			justify-content: space-around
+			align-items: center
+			width: 100%
+			input, button 
+				width: 100%
+				margin: 10px 0
+				border: none
+				border-radius: 10px
+				padding: 10px 0
+				font-family: "MontserattLight", sans-serif
+			input
+				background-color: #e6e7ea
+				padding-left: 20px
+				padding-right: 20px
+				color: rgba($black, .6)
+			button 
+				background-color: $accent
+				text-transform: uppercase
+				font-size: 16px
+				color: #fff
+				cursor: pointer
+				transition: all 0.5s ease
+				&:hover
+					background-color: lighten($accent, 5)
+
+.window_modal_active
+	transform: translate(-50%, -50%);
+
+/*----------MODAL-ORDER------------*/
+.overlay_modal_order
+	position: fixed
+	left: 0
+	top: 0
+	width: 100%
+	height: 100%
+	background-color: rgba(0,0,0,.8)
+	display: none
+	z-index: 200
+	transition: all 0.5s ease
+.window_modal_order
+	position: fixed
+	width: em(590px)
+	height: em(325px)
+	left: 50%
+	top: 50%
+	transform: translate(-50%, 200%)
+	padding: 0
+	background-color: #fcfcfc
+	z-index: 210
+	display: grid 
+	grid-template-columns: 1fr 2fr
+	overflow: hidden
+	border-radius: 10px
+	transition: all 0.5s ease
+	.el_order
+		display: flex
+		flex-direction: column
+		justify-content: space-around
+		align-items: center
+		width: 100%
+		padding: 20px
+		background-color: #e6e7ea
+		form 
+			display: flex
+			flex-direction: column
+			justify-content: space-around
+			align-items: center
+			width: 100%
+			input, button 
+				width: 100%
+				margin: 10px 0
+				border: none
+				border-radius: 10px
+				padding: 10px 0
+				font-family: "MontserattLight", sans-serif
+			input
+				background-color: $white
+				padding-left: 20px
+				padding-right: 20px
+				color: rgba($black, .6)
+			button 
+				background-color: $white
+
+				text-transform: uppercase
+				font-size: 16px
+				color: $black
+				cursor: pointer
+				transition: all 0.5s ease
+				border: 1px solid $accent
+				&:hover
+					background-color: $accent
+					color: $white
+.window_modal_order_active
+	transform: translate(-50%, -50%);
+
 /*---------HEADER----------*/
 header
 	width: 100%
@@ -81,22 +230,24 @@ header
 				flex-direction: column
 				justify-content: center
 				align-items: center
-				.h1
-					color: $accent
-					text-transform: uppercase
-					font-family: $header-font
-				p 
-					color: $white
-					font-family: $header-font
-					text-transform: uppercase
-				&:after
-					content: ''
-					position: absolute
-					top: 0
-					right: -50%
-					bottom: 0
-					width: 1px
-					background-color: rgba($white, .4)
+				a 
+					text-decoration: none
+					.h1
+						color: $accent
+						text-transform: uppercase
+						font-family: $header-font
+					p 
+						color: $white
+						font-family: $header-font
+						text-transform: uppercase
+					&:after
+						content: ''
+						position: absolute
+						top: 0
+						right: -50%
+						bottom: 0
+						width: 1px
+						background-color: rgba($white, .4)
 			.time-work
 				display: flex
 				flex-direction: column
@@ -315,6 +466,10 @@ header
 				background-color: $white
 				font-size: em(13px)
 				cursor: pointer
+				transition: all 0.5s ease
+				&:hover
+					background-color: $accent
+					color: $white
 .fta 
 	position: relative
 	padding-top: em(45px)
@@ -339,6 +494,10 @@ header
 		background-size: cover
 		margin: em(20px)
 		position: relative
+		cursor: pointer
+		img 
+			width: 100%
+			min-height: 100%
 	.btn-arrow.btn-prev
 		position: absolute
 		top: 50%
@@ -362,6 +521,38 @@ header
 		color: $white
 		.fa  
 			font-weight: 300
+
+/* overlay at start */
+.mfp-fade.mfp-bg
+  opacity: 0
+
+  -webkit-transition: all 0.15s ease-out
+  -moz-transition: all 0.15s ease-out
+  transition: all 0.15s ease-out
+
+/* overlay animate in */
+.mfp-fade.mfp-bg.mfp-ready 
+  opacity: 0.8
+
+/* overlay animate out */
+.mfp-fade.mfp-bg.mfp-removing 
+  opacity: 0
+
+/* content at start */
+.mfp-fade.mfp-wrap .mfp-content 
+  opacity: 0
+
+  -webkit-transition: all 0.5s ease-out
+  -moz-transition: all 0.5s ease-out
+  transition: all 0.5s ease-out
+
+/* content animate it */
+.mfp-fade.mfp-wrap.mfp-ready .mfp-content 
+  opacity: 1
+
+/* content animate out */
+.mfp-fade.mfp-wrap.mfp-removing .mfp-content 
+  opacity: 0
 
 /*----------S-TULIPS SECTION----------*/
 .s-tulips
@@ -406,20 +597,12 @@ header
 .s-sales 
 	&-background 
 		width: 100%
-		height: em(500px)
+		height: auto
 		background-size: cover
 		background-position: center 
 		background-repeat: no-repeat
 		position: relative
 		@extend %flex-position
-		&:before 
-			content: ''
-			position: absolute
-			top: 0
-			bottom: 0
-			right: 0
-			left: 0
-			background-color: rgba($overlay-color, .6)
 		&-description
 			z-index: 10
 			p 
@@ -431,5 +614,160 @@ header
 				span 
 					color: $accent-2
 					margin-bottom: em(-50px)
+
+/*--------------------S-OUR-FLOWERS SECTION--------------*/
+.s-our-flowers
+	@extend %flex-position
+	&-text 
+		width: 70%
+		text-align: center
+		.h2
+			margin-bottom: em(20px)
+			text-transform: uppercase
+			font-family: "MontserattBold", sans-serif
+			color: $header-postext
+		p 
+			margin-bottom: em(10px)
+			font-size: em(14px)
+			font-family: $header-font
+			color: #625b5b
+
+/*-----------------------FOOTER-------------*/
+
+footer 
+	background-color: $footer-color
+	color: rgba($white, .6)
+	font-family: $description-font
+	.f-info 
+		padding: em(120px) 0
+		@extend %flex-position
+		&-clients
+			.h2
+				text-transform: uppercase
+				color: rgba($white, .8)
+				font-family: $header-font
+			&-sections
+				margin: em(5px)
+				padding: em(5px)
+				background-color: rgba($white, .15)
+		&-subscribe
+			display: flex
+			flex-direction: column
+			justify-content: center
+			align-items: flex-start
+			.h2 
+				text-transform: uppercase
+				color: rgba($white, .8)
+				font-family: $header-font
+			& > p 
+				padding: em(20px) 0
+			.contacts
+				margin-bottom: em(10px)
+			.subscribe
+				form 
+					position: relative
+					.text-search
+						border: none
+						background-color: rgba($white, .5)
+						padding: em(5px) em(10px)
+						color: $white
+						font-family: $header-font
+						font-size: em(14px)
+					.submit-search
+						text-align: center
+						border: none
+						background-color: rgba($black, .5)
+						padding: em(5px) em(20px) em(5px) 0
+						color: $white
+						position: absolute
+						right: 0
+						bottom: 0
+						font-size: em(14px)
+						font-family: $header-font
+						cursor: pointer
+						transition: all 0.3s ease
+						&:hover
+							background-color: $accent-2
+		
+.flex-element
+	flex: 1
+	margin-right: em(20px)
+	&:last-child
+		margin: 0
+.element-2
+	flex: 4
+.element-3
+	flex: 4
+.element-4
+	flex: 3
+
+.grids
+	display: grid
+	grid-template-columns: repeat(3, 1fr)
+
+.f-bottom
+	border-top: 1px solid rgba($white, .4)
+	padding: em(40px) 0
+	.flex-bottom
+		display: flex
+		align-items: center
+		justify-content: space-between
+		.copyright
+			color: $white
+		.f-menu
+			.f-nav
+				a 
+					padding: 0 em(25px)
+					text-transform: uppercase
+					font-family: $header-font
+					color: $white
+					font-size: em(13px)
+					text-decoration: none
+					transition: 0.5s
+					position: relative
+					&:hover
+						color: $accent-2
+					&:after
+						content: ''
+						position: absolute
+						width: 1px 
+						top: 0
+						bottom: 0
+						right: 0
+						background-color: $white
+					&:last-child
+						&:after
+							opacity: 0
+		.f-social
+			a 
+				margin-right: em(20px)
+				color: $white
+				transition: 0.5s ease
+				&:hover
+					color: $accent-2
+				&:last-child
+					margin: 0
+
+.top 
+	position: fixed
+	bottom: 70px
+	right: -100px
+	background-color: #515151
+	color: $white
+	font-size: 16px
+	width: 30px
+	height: 30px
+	text-align: center
+	line-height: 30px
+	cursor: pointer
+	transition: all 0.5s ease
+	z-index: 200
+	.fa 
+		line-height: 0
+	&:hover
+		background-color: $accent-2
+	&.top_active
+		right: 40px
+
 
 @import "media" // Always at the end
